Adds slug generation to campaigns and more validations. #2.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -17,6 +17,7 @@ en:
         district: 'District'
         name: 'Name'
         school: 'School'
+        slug: 'Slug'
         state: 'State'
         teacher: 'Teacher'
       contribution:
