Starts refactoring the Campaignable polymorphism. WIP. #14.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -14,9 +14,11 @@ en:
     attributes:
       campaign:
         active: 'Active'
+        campaignable: 'Campaignable'
         district: 'District'
         name: 'Name'
         school: 'School'
+        school_wide: 'School Wide'
         slug: 'Slug'
         state: 'State'
         teacher: 'Teacher'
