Adds some more Campaignable validations. #14.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -15,6 +15,7 @@ en:
       campaign:
         active: 'Active'
         campaignable: 'Campaignable'
+        campaignable_type: 'Campaignable Type'
         district: 'District'
         name: 'Name'
         school: 'School'
