Adds goal_amount column to Campaigns. #2.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -17,6 +17,9 @@ en:
         campaignable: 'Campaignable'
         campaignable_type: 'Campaignable Type'
         district: 'District'
+        goal_amount: 'Goal Amount'
+        goal_amount_cents: 'Goal Amount (cents)'
+        goal_amount_dollars: 'Goal Amount (USD)'
         name: 'Name'
         school: 'School'
         school_wide: 'School Wide'
