Requires teachers to have a valid email address. #29.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -47,6 +47,7 @@ en:
         abbr: 'Abbreviation'
         name: 'Name'
       teacher:
+        email: 'Email'
         first_name: 'First Name'
         full_name: 'Full Name'
         last_name: 'Last Name'
