--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -63,6 +63,7 @@ en:
         first_name: 'First Name'
         full_name: 'Full Name'
         last_name: 'Last Name'
+        prestigious_name: 'Prestigious Name'
       tos:
         content: 'Content'
       user:
